--- a/samples/IdentitySample.Mvc/project.json
+++ b/samples/IdentitySample.Mvc/project.json
@@ -21,7 +21,7 @@
     "Microsoft.AspNetCore.Server.IISIntegration": "1.0.2",
     "Microsoft.AspNetCore.Server.Kestrel": "1.0.3",
     "Microsoft.EntityFrameworkCore.Tools": {
-      "version": "1.0.0-preview4-update1",
+      "version": "1.0.0-preview4-final",
       "type": "build"
     },
     "Microsoft.EntityFrameworkCore.SqlServer": "1.0.3",
@@ -47,8 +47,8 @@
     }
   },
   "tools": {
-    "Microsoft.AspNetCore.Server.IISIntegration.Tools": "1.0.0-preview4-update1",
-    "Microsoft.EntityFrameworkCore.Tools.Dotnet": "1.0.0-preview4-update1"
+    "Microsoft.AspNetCore.Server.IISIntegration.Tools": "1.0.0-preview4-final",
+    "Microsoft.EntityFrameworkCore.Tools.Dotnet": "1.0.0-preview4-final"
   },
   "publishOptions": {
     "include": [
